<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matt.finalproject.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open1"
        android:textColor="@android:color/black"
        android:id="@+id/textView7"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="31dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open2"
        android:textColor="@android:color/black"
        android:layout_marginStart="4dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="22dp"
        android:text="@string/air_desc"
        android:textColor="@android:color/black"
        android:layout_marginStart="31dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/waterButton"
        android:layout_marginTop="48dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="58dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/airButton"
        android:layout_marginLeft="31dp" />

    <Button
        android:id="@+id/airButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_button"
        android:textColor="@android:color/holo_orange_light"
        android:visibility="visible"
        android:layout_marginStart="4dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/waterButton"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/waterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_button"
        android:textColor="@android:color/holo_blue_dark"
        android:visibility="visible"
        android:layout_marginStart="1dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="190dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="1dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_desc"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/waterButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/waterButton" />

    <Button
        android:id="@+id/earthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/earth_button"
        android:textColor="@android:color/holo_green_dark"
        android:visibility="visible"
        android:layout_marginStart="32dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="33dp"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="33dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earth_desc"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/earthButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/earthButton" />

    <Button
        android:id="@+id/fireButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fire_button"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="visible"
        android:layout_marginEnd="32dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="35dp"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="32dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fire_desc"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fireButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/fireButton" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_button"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
