<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matt.finalproject.FireActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:layout_marginStart="32dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="87dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp" />

    <RadioButton
        android:text="@string/radio_aries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioAries"
        android:layout_marginStart="24dp"
        android:onClick="onRadioClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioLeo"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp" />

    <RadioButton
        android:text="@string/radio_leo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioLeo"
        android:layout_marginStart="24dp"
        android:onClick="onRadioClick"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="40dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/radioAries"
        android:layout_marginLeft="24dp" />

    <RadioButton
        android:text="@string/radio_sag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioSag"
        android:layout_marginStart="25dp"
        android:onClick="onRadioClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioLeo"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/radioLeo"
        android:layout_marginLeft="25dp" />

    <TextView
        android:id="@+id/fireBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="186dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp" />

    <ImageView
        android:id="@+id/firePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/radioLeo"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@+id/radioLeo"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
