<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matt.finalproject.EarthActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <RadioButton
        android:text="@string/radio_taurus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taurusRadio"
        android:layout_marginStart="24dp"
        android:onClick="onRadioClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/virgoRadio"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp" />

    <RadioButton
        android:text="@string/radio_virgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/virgoRadio"
        android:onClick="onRadioClick"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="13dp"
        android:layout_marginTop="56dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/taurusRadio"
        android:layout_marginLeft="13dp" />

    <RadioButton
        android:text="@string/radio_capricorn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/capRadio"
        android:onClick="onRadioClick"
        android:layout_marginStart="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/virgoRadio"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/virgoRadio"
        android:layout_marginLeft="15dp" />

    <Button
        android:text="@string/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:layout_marginStart="30dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="78dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/earthbody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:textColor="@android:color/black"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="193dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="31dp" />

    <ImageView
        android:id="@+id/earthPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        app:layout_constraintRight_toRightOf="@+id/virgoRadio"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/virgoRadio"
        android:layout_marginRight="15dp" />
</android.support.constraint.ConstraintLayout>
